Allow metadata parsing of unstructured person and organisation strings